# sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.speakeasy/: a2a.arazzo.yaml  gen.yaml  inference.arazzo.yaml  memory.arazzo.yaml  tests.arazzo.yaml  workflow.yaml
rust/: Cargo.toml
rust/channels/: Cargo.toml  build.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs  spec.rs
rust/inference/: Cargo.toml  build.rs
rust/manowar/: Cargo.toml  build.rs  spec.yaml
rust/memory/: Cargo.toml  build.rs
rust/memory/src/: lib.rs
rust/sdk/: Cargo.toml
rust/sdk/src/: lib.rs
rust/sdk/tests/: parity.rs
rust/tools/: Cargo.toml
rust/tools/src/: lib.rs
rust/x402/: Cargo.toml  build.rs  spec.yaml
scripts/: sync-version.mjs
shared/.speakeasy/: a2a.arazzo.yaml  commands.arazzo.yaml  gen.yaml  inference.arazzo.yaml  memory.arazzo.yaml  tests.arazzo.yaml  workflow.yaml
shared/specs/: channels.openapi.yaml  inference.openapi.yaml  memory.openapi.yaml
specs/: agentic.openapi.yaml  inference.openapi.yaml  manowar.openapi.yaml  memory.openapi.yaml  x402.openapi.yaml
src/: errors.ts  events.ts  http.ts  index.ts  version.ts
src/resources/: accounts.ts  agent.ts  backpack.ts  directory.ts  dispenser.ts  feedback.ts  inference.ts  instrumentation.ts  keys.ts  memory.ts  models.ts  permissions.ts  session-events.ts  webhooks.ts  workflow.ts  x402.ts
src/streaming/: budget.ts  receipt.ts  sse.ts
src/types/: index.ts
tests/: sdk.contract.test.ts  sdk.events.test.ts  sdk.runtime-streams.test.ts  sdk.session-events.test.ts  sdk.streaming.test.ts  sdk.unit.test.ts
tests/e2e/: agent-identity-and-loop.ts  memory-d-validation.ts  util.ts
typescript/: CHANGELOG.md  package-lock.json  package.json  tsconfig.json
typescript/scripts/: sync-version.mjs
typescript/src/: events.ts  http.ts  index.ts  storage.ts  version.ts
typescript/src/resources/: agent.ts  channels.ts  directory.ts  inference.ts  instrumentation.ts  local.ts  memory.ts  models.ts  receipts.ts  session-events.ts  settlement.ts  system.ts  workflow.ts  x402.ts
typescript/src/streaming/: sse.ts
typescript/src/types/: index.ts
typescript/tests/: sdk.contract.test.ts  sdk.events.test.ts  sdk.runtime-streams.test.ts  sdk.streaming.test.ts  sdk.unit.test.ts
