[package]
name = "compose-market-core"
version.workspace = true
edition.workspace = true
description = "Shared transport, routing, payment, and stream primitives for the Compose Market SDK."
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
codegen = [
    "dep:openapiv3",
    "dep:prettyplease",
    "dep:progenitor",
    "dep:serde_yaml",
    "dep:syn",
]

[dependencies]
openapiv3 = { workspace = true, optional = true }
prettyplease = { workspace = true, optional = true }
progenitor = { workspace = true, optional = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
