[package]
name = "compose-sdk"
version.workspace = true
edition.workspace = true
description = "Public Rust facade for the Compose Market SDK."
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
compose-channels = { path = "../channels", version = "0.8.9" }
compose-core = { package = "compose-market-core", path = "../core", version = "0.8.9" }
compose-inference = { path = "../inference", version = "0.8.9" }
compose-manowar = { path = "../manowar", version = "0.8.9" }
compose-memory = { path = "../memory", version = "0.8.9" }
compose-tools = { path = "../tools", version = "0.8.9" }
compose-x402 = { path = "../x402", version = "0.8.9" }

[dev-dependencies]
serde_json = { workspace = true }
